# radio-app

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-run.sh  make-app-bundle.sh  radio-app.desktop  start.sh
qml/: CountrySidebar.qml  Main.qml  NowPlayingBar.qml  RadioGrid.qml  SpectrumAnalyzer.qml  StationCard.qml
src/: gui_main.cpp  main.cpp
src/cli/: CLI.cpp  CLI.h
src/database/: Database.cpp  Database.h
src/models/: Country.h  Radio.h
src/player/: Player.cpp  Player.h
src/qml/: CountryModel.cpp  CountryModel.h  PlayerController.cpp  PlayerController.h  RadioApp.cpp  RadioApp.h  RadioModel.cpp  RadioModel.h
